--- a/files/redux-toastr/1.0.2/redux-toastr.css
+++ b/files/redux-toastr/1.0.2/redux-toastr.css
@@ -1,3 +1,58 @@
+@charset "UTF-8";
+
+@font-face {
+  font-family: "redux-toastr";
+  src:url("../fonts/redux-toastr.eot");
+  src:url("../fonts/redux-toastr.eot?#iefix") format("embedded-opentype"),
+    url("../fonts/redux-toastr.woff") format("woff"),
+    url("../fonts/redux-toastr.ttf") format("truetype"),
+    url("../fonts/redux-toastr.svg#redux-toastr") format("svg");
+  font-weight: normal;
+  font-style: normal;
+
+}
+
+[data-icon]:before {
+  font-family: "redux-toastr" !important;
+  content: attr(data-icon);
+  font-style: normal !important;
+  font-weight: normal !important;
+  font-variant: normal !important;
+  text-transform: none !important;
+  speak: none;
+  line-height: 1;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+[class^="icon-"]:before,
+[class*=" icon-"]:before {
+  font-family: "redux-toastr" !important;
+  font-style: normal !important;
+  font-weight: normal !important;
+  font-variant: normal !important;
+  text-transform: none !important;
+  speak: none;
+  line-height: 1;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-close-round:before {
+  content: "\62";
+}
+.icon-information-circle:before {
+  content: "\63";
+}
+.icon-check-1:before {
+  content: "\64";
+}
+.icon-exclamation-triangle:before {
+  content: "\65";
+}
+.icon-exclamation-alert:before {
+  content: "\69";
+}
 .animated {
   -webkit-animation-duration: 1s;
           animation-duration: 1s;
